--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,66 @@
-body {
-
+*{
+  padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  overflow: hidden;
 }
 
+body {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.app{
+  height: 750px;
+  width: 1800px;
+}
+
+header{
+  background-color: cyan;
+  text-align: center;
+  padding: 10px;
+
+}
+.category{
+  margin-top: 12px;
+}
+.category #select-category{
+  width: 200px;
+}
+.products-display{
+  margin-top: 50px;
+  position: relative;
+}
+.product-list{
+  display: flex;
+  align-items: center;
+  gap:14px;
+  padding: 20px;
+}
+
+
+
+#product-images{
+  width: 190px;
+  height: 110px;
+}
+.navigation-buttons{
+  width: 25px;
+  position: absolute;
+  top: 60px;
+}
+
+#left-button{
+
+  
+}
+
+#right-button{
+
+  right: 0px;
+}
