--- a/src/index.css
+++ b/src/index.css
@@ -6,18 +6,14 @@
   overflow: hidden;
 }
 
-body {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
+
 
 .app{
-  height: 750px;
-  width: 1800px;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  padding: 10px;
+ 
 }
 
 header{
@@ -33,18 +29,22 @@ header{
   width: 200px;
 }
 .products-display{
-  margin-top: 50px;
-  position: relative;
+  margin-top: 150px;
+  
 }
 .product-list{
   display: flex;
-  align-items: center;
+ 
   gap:14px;
   padding: 20px;
+  height: 800px;
 }
 
 
-
+.product-list li{
+  width: 190px;
+  height: 110px;
+}
 #product-images{
   width: 190px;
   height: 110px;
@@ -52,15 +52,55 @@ header{
 .navigation-buttons{
   width: 25px;
   position: absolute;
-  top: 60px;
+  z-index: 1;
+  top: 31.5%;
 }
 
-#left-button{
 
-  
-}
 
 #right-button{
 
   right: 0px;
+}
+
+#modal{
+  position: absolute;
+  z-index: 10;
+  min-height: 100vh;
+  min-width: 100vw;
+  background-color: aliceblue;
+  opacity: 0.6;
+ 
+}
+
+.product-overview{
+  position: absolute;
+  z-index: 12;
+  min-height: 200px;
+  min-width: 300px;
+ 
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  background-color: aliceblue;
+  top: 20px;
+  left: 35%;
+  overflow-y: scroll;
+}
+.product-header{
+  display: flex;
+  justify-content: space-between;
+
+}
+.product-header button{
+  background-color: orange;
+}
+.product-details{
+  display: flex;
+  padding: 10px;
+  gap: 20px;
+}
+.image img{
+  width: 220px;
+  height: 130px;
 }
